bin/tests/errors/parser/parser_err_global_skip_missing_arg.swg
#global skip
func A() {}                         // swc-expected-error {{parser_err_expected_token_before}}
